# YTtscript2AI

./: .gitignore  CMakeLists.txt  Makefile  README.md  YT_Transcript.spec  get_transcript.py  main.cpp  requirements.txt  youtube_transcript_app.py
